fix: remove hover on mobile

--- a/src/app/page/Category/Category/CategoryItem.module.css
+++ b/src/app/page/Category/Category/CategoryItem.module.css
@@ -22,3 +22,9 @@
     box-shadow: var(--mantine-shadow-md);
   }
 }
+
+.item:active {
+  transform: scale(1.05);
+  background-color: var(--tg-theme-secondary-background-color);
+  box-shadow: var(--mantine-shadow-md);
+}
